--- a/cookie-recipe.html
+++ b/cookie-recipe.html
@@ -8,7 +8,7 @@
 
 <body>
   <h1>Best Chocolate Chip Cookies</h1>
-  <img src="http://lorempixel.com/400/200/" alt="An image of a cookie" />
+  <img src="http://lorempixel.com/400/200/" alt="An image of a cookie">
   <p>
     This recipe is from my dad and they are a favorite among friends and
     family. The secret ingredient is the coconut! <em>Be warned</em>, these
